name:                snowflake
version:             0.1.0.0
synopsis:            Manipulate HTML and HTML Templates
description:         Please see README.md
homepage:            https://github.com/ChristopherKing42/snowflake#readme
license:             BSD3
license-file:        LICENSE
author:              Christopher King
maintainer:          G.nius.ck@gmail.com
copyright:           2016 Christopher King
category:            Web, Text
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Flake
  build-depends:
    base >= 4.7 && < 5,
    tagsoup,
    free,
    void

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ChristopherKing42/snowflake
